Set endorsed library path to be used by Ant
git-svn-id: https://svn.apache.org/repos/asf/cocoon/branches/new-kernel@29308 13f79535-47bb-0310-9956-ffa450edef68